@@ -13,8 +13,8 @@ my $use64 = Math::Prime::Util::prime_get_config->{'maxbits'} > 32;
 my $broken64 = (18446744073709550592 == ~0);
 
 plan tests => 8        # forprimes errors
-            + 12 + 5   # forprimes simple
-            + 1        # forcomposites simple
+            + 12 + 6   # forprimes simple
+            + 3        # forcomposites simple
             + 2        # fordivisors simple
             + 3        # iterator errors
             + 7        # iterator simple
@@ -64,8 +64,17 @@ ok(!eval { forprimes { 1 } 5.6; },   "forprimes abc");
 { my @t; forprimes { push @t, $_ } 31398, 31468;
   is_deeply( [@t], [], "forprimes 31398,31468 (empty region)" );
 }
+{ my @t; forprimes { push @t, $_ } 2147483647,2147483659;
+  is_deeply( [@t], [2147483647,2147483659], "forprimes 2147483647,2147483659" );
+}
+{ my @t; forcomposites { push @t, $_ } 2147483647,2147483659;
+  is_deeply( [@t], [qw/2147483648 2147483649 2147483650 2147483651 2147483652 2147483653 2147483654 2147483655 2147483656 2147483657 2147483658/], "forcomposites 2147483647,2147483659" );
+}
 { my @t; forcomposites { push @t, $_ } 50;
   is_deeply( [@t], [qw/4 6 8 9 10 12 14 15 16 18 20 21 22 24 25 26 27 28 30 32 33 34 35 36 38 39 40 42 44 45 46 48 49 50/], "forcomposites 50" );
+}
+{ my @t; forcomposites { push @t, $_ } 200,410;
+  is_deeply( [@t], [qw/200 201 202 203 204 205 206 207 208 209 210 212 213 214 215 216 217 218 219 220 221 222 224 225 226 228 230 231 232 234 235 236 237 238 240 242 243 244 245 246 247 248 249 250 252 253 254 255 256 258 259 260 261 262 264 265 266 267 268 270 272 273 274 275 276 278 279 280 282 284 285 286 287 288 289 290 291 292 294 295 296 297 298 299 300 301 302 303 304 305 306 308 309 310 312 314 315 316 318 319 320 321 322 323 324 325 326 327 328 329 330 332 333 334 335 336 338 339 340 341 342 343 344 345 346 348 350 351 352 354 355 356 357 358 360 361 362 363 364 365 366 368 369 370 371 372 374 375 376 377 378 380 381 382 384 385 386 387 388 390 391 392 393 394 395 396 398 399 400 402 403 404 405 406 407 408 410/], "forcomposites 200,410" );
 }
 {
   my $a = 0;
