@@ -78,6 +78,7 @@ plan tests =>  0
              + scalar(keys %allfactors)
              + 13  # moebius, euler_phi, jordan totient, divsum, znorder, etc.
              + 2   # liouville
+             + 3   # gcd
              + 15  # random primes
              + 2   # miller-rabin random
              + 1;
@@ -107,6 +108,7 @@ use Math::Prime::Util qw/
   znorder
   znprimroot
   liouville
+  gcd
   pn_primorial
   ExponentialIntegral
   LogarithmicIntegral
@@ -252,6 +254,10 @@ SKIP: {
 ###############################################################################
 is( liouville(  560812147176208202656339069), -1, "liouville(a x b x c) = -1" );
 is( liouville(10571644062695614514374497899),  1, "liouville(a x b x c x d) = 1" );
+###############################################################################
+is( gcd(921166566073002915606255698642,1168315374100658224561074758384,951943731056111403092536868444), 14, "gcd(a,b,c)" );
+is( gcd(1214969109355385138343690512057521757303400673155500334102084,1112036111724848964580068879654799564977409491290450115714228), 42996, "gcd(a,b)" );
+is( gcd(745845206184162095041321,61540282492897317017092677682588744425929751009997907259657808323805386381007), 1, "gcd of two primes = 1" );
 
 ###############################################################################
 
